# api_taller

./: .dockerignore  .gitignore  Dockerfile  Notebook.md  README.md  Stress_test_postman.json  pyproject.toml  requirements.txt  val_artefactos.py
.github/workflows/: workflow.yml
Notebook/: Notebook_API_Taller.ipynb  pipeline_1.joblib  pipeline_2.joblib  pipeline_3.joblib  pipeline_4.joblib  pipeline_5.joblib  pipeline_6.joblib  pipeline_completo.joblib
app/: main.py  model.py  schema.py
artefactos/: modelo_RL.joblib  modelo_RL.pkl  pipeline_completo.pkl
