[project]
name = "desafio-mlops"
version = "0.1.0"
description = "Proyecto desarrollado en base a los requerimientos solicitados por el cliente considerando las condiciones especiales declaradas. Se desarrolla una API a partir de FastAPI la cual consume datos de un modelo predictivo entrenado con data historica. Devuelve el tiempo en semanas que tardaría un vehículo en entrar y salir del taller mecánico."
authors = [
    {name = "Benjamín Pérez Briceño"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.128.7)",
    "uvicorn (==0.40.0)",
    "httpx (==0.28.1)",
    "scikit-learn (==1.6.1)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
